--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -4,12 +4,15 @@ $nav-link-hover-color: lighten($nav-link-color, 15%) !default;
 $nav-horizontal-separator: 1px solid $global-color !default;
 
 nav {
+    position: fixed;
+    top: 0;
     margin: 0;
     width: 100%;
     height: 60px;
     background-color: $nav-background-color;
     transition: height 0.7s ease;
     overflow: hidden;
+    z-index: 1;
 }
 
 nav .nav-controls {
